align center fixed

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -11,16 +11,21 @@ a{
 }
 section {
     scroll-snap-align: start;
-    height: 100vh;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 /*helpers*/
 .container{
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
     height: 100%;
     width: 80%;
     margin: 0 auto;
 }
 .align-center-vertical{
-    height: 100%;
+    flex-grow: 1;
     width: 100%;
     display: flex;
     align-items: center;
